[gd_scene load_steps=4 format=3 uid="uid://nwdm5qubbdu6"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_asg8t"]
[ext_resource type="Texture2D" uid="uid://bsxyylh6s4xhx" path="res://assets/temp/Yellow.png" id="1_cnf73"]
[ext_resource type="Texture2D" uid="uid://cdmsryjdr6jd7" path="res://assets/temp/cooltext459135631066908.png" id="3_1u6gf"]

[node name="Main" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_asg8t")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_cnf73")
stretch_mode = 1

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -123.0
offset_top = 23.0
offset_right = 124.0
offset_bottom = 61.0
grow_horizontal = 2
texture = ExtResource("3_1u6gf")
expand_mode = 1

[node name="BtnStart" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -15.5
offset_right = 50.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Start Game"

[node name="BtnExit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 34.5
offset_right = 50.0
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit game"

[connection signal="pressed" from="BtnStart" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="BtnExit" to="." method="_on_btn_exit_pressed"]
